--- a/app/src/main/res/layout/fragment_alarm_log.xml
+++ b/app/src/main/res/layout/fragment_alarm_log.xml
@@ -13,7 +13,7 @@
             android:layout_height="0dp"
             android:background="@color/white"
             app:layout_constraintHeight_default="percent"
-            app:layout_constraintHeight_percent="0.086"
+            app:layout_constraintHeight_percent="0.120"
             app:layout_constraintTop_toTopOf="parent"
 
             >
@@ -23,17 +23,18 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginEnd="1.5dp"
+                android:layout_marginBottom="8dp"
                 android:background="@color/gray11"
                 android:text="@string/date_time"
                 android:textColor="@color/black"
+                android:textAllCaps="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnFilterSystem"
                 app:layout_constraintHeight_default="percent"
-                app:layout_constraintHeight_percent="0.706"
+                app:layout_constraintHeight_percent="0.500"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_default="percent"
                 app:layout_constraintWidth_percent="0.264" />
 
@@ -42,16 +43,17 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="1.5dp"
+                android:layout_marginBottom="8dp"
                 android:background="@color/gray11"
                 android:text="@string/systems_filter"
+                android:textAllCaps="false"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_default="percent"
-                app:layout_constraintHeight_percent="0.706"
+                app:layout_constraintHeight_percent="0.500"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/btnFilterDateTime"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_default="percent"
                 app:layout_constraintWidth_percent="0.264" />
 
@@ -59,14 +61,38 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="9.3dp"
-                android:layout_marginTop="9.3dp"
                 android:fontFamily="@font/arialmt"
                 android:text="@string/filter_by"
                 android:textColor="@color/gray9"
                 android:textSize="14.7sp"
+                app:layout_constraintBottom_toTopOf="@+id/btnFilterDateTime"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+                android:id="@+id/ibDeleteSelectedItems"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/transparent"
+                android:contentDescription="@string/description"
+                android:src="@drawable/btn_delete"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/btnFilterSystem"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        <CheckBox
+                android:id="@+id/cbIsSelected"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:text="@string/select_all"
+                android:textSize="11sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
@@ -82,7 +108,7 @@
             android:layout_height="0dp"
             android:background="@color/white"
             app:layout_constraintHeight_default="percent"
-            app:layout_constraintHeight_percent="0.913"
+            app:layout_constraintHeight_percent="0.880"
             app:layout_constraintTop_toBottomOf="@+id/viewBetweenContainer"
 
             >
