--- a/app/src/main/res/layout/item_alarm.xml
+++ b/app/src/main/res/layout/item_alarm.xml
@@ -1,27 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tool="http://schemas.android.com/tools"
+        android:id="@+id/consContainer"
         android:layout_height="154dp"
         android:background="@color/white"
-        xmlns:tool="http://schemas.android.com/tools">
+        android:layout_width="match_parent"
+        android:clickable="true"
+        android:focusable="true">
+
+
+    <!--    <CheckBox-->
+    <!--            android:id="@+id/cbSelectAlarm"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_marginStart="10dp"-->
+    <!--            android:fontFamily="@font/arialmt"-->
+    <!--            android:text="@string/select"-->
+    <!--            android:textColor="@color/black"-->
+    <!--            android:textSize="14.7sp"-->
+    <!--            app:layout_constraintBottom_toTopOf="@+id/tvDateTitle"-->
+    <!--            app:layout_constraintStart_toStartOf="parent"-->
+    <!--            app:layout_constraintTop_toTopOf="parent" />-->
 
 
     <TextView
             android:id="@+id/tvDateTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="12dp"
             android:fontFamily="@font/arialmt"
             android:text="@string/date_title1"
             android:textAllCaps="true"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:textColor="@color/black"
             android:textSize="14.7sp"
-            app:layout_constraintVertical_bias="0.047" />
+            app:layout_constraintBottom_toTopOf="@+id/tvTimeTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
             android:id="@+id/tvDate"
@@ -40,19 +55,20 @@
             android:id="@+id/tvTimeTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
             android:fontFamily="@font/arialmt"
             android:text="@string/time_title1"
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="14.7sp"
+            app:layout_constraintBottom_toTopOf="@+id/tvNameTitle"
             app:layout_constraintStart_toStartOf="@+id/tvDateTitle"
             app:layout_constraintTop_toBottomOf="@+id/tvDateTitle" />
+
     <TextView
             android:id="@+id/tvTime"
-            android:layout_marginStart="3dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
             android:fontFamily="@font/arialmt"
             android:text="@string/time_title1"
             android:textAllCaps="true"
@@ -64,7 +80,6 @@
 
     <TextView
             android:id="@+id/tvNameTitle"
-            android:layout_marginTop="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/arialmt"
@@ -72,15 +87,16 @@
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="14.7sp"
-            app:layout_constraintStart_toStartOf="@+id/tvDateTitle"
-            app:layout_constraintTop_toBottomOf="@+id/tvTimeTitle"
+            app:layout_constraintBottom_toBottomOf="parent"
 
-            />
+            app:layout_constraintStart_toStartOf="@+id/tvDateTitle"
+            app:layout_constraintTop_toBottomOf="@+id/tvTimeTitle" />
+
     <TextView
             android:id="@+id/tvName"
-            android:layout_marginStart="3dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
             android:fontFamily="@font/arialmt"
             android:text="@string/name_title1"
             android:textAllCaps="true"
@@ -95,9 +111,9 @@
             android:id="@+id/ivWifiLevel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tvDateTitle"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.952" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -116,13 +132,13 @@
             android:id="@+id/flAlarmPic"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_default="percent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHeight_percent="0.918"
             app:layout_constraintHorizontal_bias="0.969"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_default="percent"
             app:layout_constraintWidth_percent="0.517">
 
@@ -134,7 +150,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:scaleType="centerInside"
-            app:srcCompat="@drawable/default_alarm_photo" />
+                app:srcCompat="@drawable/default_alarm_photo" />
 
         <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/ivIconVideo"
@@ -160,11 +176,11 @@
             android:layout_marginStart="8.7dp"
             android:layout_marginTop="14dp"
             android:layout_marginEnd="14dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:clickable="true"
             android:focusable="true"
-            android:padding="4dp"
+            android:padding="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_share" />
 
 
