-Scan just emails that did not scanned -Bugs fixed

--- a/app/src/main/res/layout/activity_activation.xml
+++ b/app/src/main/res/layout/activity_activation.xml
@@ -49,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/share"
+            android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="@+id/tvImei"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -94,6 +95,7 @@
             android:id="@+id/btnSignIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAllCaps="false"
             android:text="@string/activate"
             app:layout_constraintBottom_toBottomOf="@+id/etEnterCode"
             app:layout_constraintEnd_toEndOf="parent"
