--- a/app/src/main/res/layout/fragment_configuration.xml
+++ b/app/src/main/res/layout/fragment_configuration.xml
@@ -80,6 +80,7 @@
                 android:id="@+id/btnSaveSensors"
                 android:layout_width="65.3dp"
                 android:layout_height="0dp"
+                android:textAllCaps="false"
                 app:layout_constraintTop_toTopOf="@+id/etSensorValue"
                 app:layout_constraintBottom_toBottomOf="@+id/etSensorValue"
                 app:layout_constraintStart_toEndOf="@+id/etSensorValue"
@@ -144,6 +145,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
                 android:text="@string/default_str"
+                android:textAllCaps="false"
                 style="@style/configContentItem"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -278,6 +280,7 @@
                 android:id="@+id/btnSaveFlicker"
                 android:layout_width="65.3dp"
                 android:layout_height="0dp"
+                android:textAllCaps="false"
                 app:layout_constraintTop_toTopOf="@+id/etAlarmFlickerValue"
                 app:layout_constraintBottom_toBottomOf="@+id/etAlarmFlickerValue"
                 app:layout_constraintStart_toEndOf="@+id/etAlarmFlickerValue"
@@ -544,6 +547,7 @@
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/arialmt"
                     android:lineSpacingExtra="-9.9sp"
+                    android:textAllCaps="false"
                     android:text="@string/mail_address_title"
                     android:textColor="@color/black"
                     android:textSize="14.7sp"
