--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,4 +39,5 @@
     <color name="gray12">#e6e6e6</color>
     <color name="gray13">#999999</color>
     <color name="green2">#4b9c55</color>
+    <color name="blue">#0000FF</color>
 </resources>
