--- a/app/src/main/res/layout/fragment_sort_system_dialog.xml
+++ b/app/src/main/res/layout/fragment_sort_system_dialog.xml
@@ -161,6 +161,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
+            android:textAllCaps="false"
             android:text="@string/ok"
             android:textColor="@color/white"
             app:backgroundTint="@color/green1"
@@ -173,6 +174,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnCancelSort"
+            android:textAllCaps="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
