--- a/app/src/main/res/layout/item_alarm.xml
+++ b/app/src/main/res/layout/item_alarm.xml
@@ -29,12 +29,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
             android:fontFamily="@font/arialmt"
             android:text="@string/date_title1"
-            android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="14.7sp"
-            app:layout_constraintBottom_toTopOf="@+id/tvTimeTitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,12 +54,11 @@
             android:id="@+id/tvTimeTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:fontFamily="@font/arialmt"
             android:text="@string/time_title1"
-            android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="14.7sp"
-            app:layout_constraintBottom_toTopOf="@+id/tvNameTitle"
             app:layout_constraintStart_toStartOf="@+id/tvDateTitle"
             app:layout_constraintTop_toBottomOf="@+id/tvDateTitle" />
 
@@ -71,7 +69,6 @@
             android:layout_marginStart="3dp"
             android:fontFamily="@font/arialmt"
             android:text="@string/time_title1"
-            android:textAllCaps="true"
             android:textColor="@color/red2"
             android:textSize="13.3sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvTimeTitle"
@@ -82,13 +79,12 @@
             android:id="@+id/tvNameTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:fontFamily="@font/arialmt"
             android:text="@string/name_title1"
-            android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textSize="14.7sp"
-            app:layout_constraintBottom_toBottomOf="parent"
 
+            android:textSize="14.7sp"
             app:layout_constraintStart_toStartOf="@+id/tvDateTitle"
             app:layout_constraintTop_toBottomOf="@+id/tvTimeTitle" />
 
@@ -99,7 +95,6 @@
             android:layout_marginStart="3dp"
             android:fontFamily="@font/arialmt"
             android:text="@string/name_title1"
-            android:textAllCaps="true"
             android:textColor="@color/red2"
             android:textSize="13.3sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvNameTitle"
