--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,5 +72,24 @@
         <item name="android:layout_height">70dp</item>
     </style>
 
+    <style name="commands_buttons">
+        <item name="android:textSize">14.7sp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/arialmt</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@color/green1</item>
+        <item name="android:paddingEnd">10dp</item>
+        <item name="android:paddingStart">10dp</item>
+
+    </style>
+
+    <style name="commands_emails_fields">
+        <item name="android:layout_height">30dp</item>
+        <item name="android:textSize">14.7sp</item>
+        <item name="android:background">@drawable/edit_text_border</item>
+        <item name="android:inputType">textEmailAddress</item>
+    </style>
+
 
 </resources>
