--- a/app/src/main/res/layout/custom_dialog_phonenum_command.xml
+++ b/app/src/main/res/layout/custom_dialog_phonenum_command.xml
@@ -2,101 +2,79 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="400dp"
-        android:layout_height="500dp"
+        android:layout_height="400dp"
         android:orientation="vertical">
 
 
     <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvCommandTitle"
-            style="@style/commands_emails_fields"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/arialmt"
             android:gravity="center_horizontal"
             android:lineSpacingExtra="5.6sp"
-            android:text="@string/emails_title"
+            android:text="@string/phone_num_title"
             android:textColor="@color/medium_green"
             android:textSize="15.3sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    <br.com.sapereaude.maskedEditText.MaskedEditText
+    <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/etField1"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/edit_text_border"
-            android:hint="0000000000"
+            android:digits="0123456789+-"
             android:imeOptions="actionDone"
-            android:inputType="number"
+            android:ems="12"
+            android:inputType="phone"
             android:maxLines="1"
             android:textAlignment="viewStart"
             android:textSize="14.7sp"
-            app:allowed_chars="1234567890"
-            app:keep_hint="true"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvCommandTitle"
-            app:mask="###-#######" />
+            android:textDirection="ltr"
+            app:layout_constraintBottom_toBottomOf="@+id/tvPhone1"
+            app:layout_constraintStart_toEndOf="@+id/tvPhone1"
+            app:layout_constraintTop_toTopOf="@+id/tvPhone1" />
 
-    <br.com.sapereaude.maskedEditText.MaskedEditText
+
+    <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/etField2"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/edit_text_border"
-            android:hint="0000000000"
+            android:digits="0123456789+-"
             android:imeOptions="actionDone"
-            android:inputType="number"
+            android:ems="12"
+            android:inputType="phone"
             android:maxLines="1"
             android:textAlignment="viewStart"
             android:textSize="14.7sp"
-            app:allowed_chars="1234567890"
-            app:keep_hint="true"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etField1"
-            app:mask="###-#######" />
+            android:textDirection="ltr"
+            app:layout_constraintBottom_toBottomOf="@+id/tvPhone2"
+            app:layout_constraintStart_toEndOf="@+id/tvPhone2"
+            app:layout_constraintTop_toTopOf="@+id/tvPhone2" />
 
-    <br.com.sapereaude.maskedEditText.MaskedEditText
+    <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/etField3"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/edit_text_border"
-            android:hint="0000000000"
+            android:digits="0123456789+-"
             android:imeOptions="actionDone"
-            android:inputType="number"
+            android:ems="12"
+            android:inputType="phone"
             android:maxLines="1"
             android:textAlignment="viewStart"
             android:textSize="14.7sp"
-            app:allowed_chars="1234567890"
-            app:keep_hint="true"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etField2"
-            app:mask="###-#######" />
-
-    <!--    <br.com.sapereaude.maskedEditText.MaskedEditText-->
-    <!--            android:id="@+id/etField4"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="30dp"-->
-    <!--            android:layout_marginStart="32dp"-->
-    <!--            android:layout_marginTop="32dp"-->
-    <!--            android:background="@drawable/edit_text_border"-->
-    <!--            android:hint="0000000000"-->
-    <!--            android:imeOptions="actionDone"-->
-    <!--            android:inputType="number"-->
-    <!--            android:maxLines="1"-->
-    <!--            android:textAlignment="viewStart"-->
-    <!--            android:textSize="14.7sp"-->
-    <!--            app:allowed_chars="1234567890"-->
-    <!--            app:keep_hint="true"-->
-    <!--            app:layout_constraintStart_toStartOf="parent"-->
-    <!--            app:layout_constraintTop_toBottomOf="@+id/etField3"-->
-    <!--            app:mask="###-#######" />-->
+            android:textDirection="ltr"
+            app:layout_constraintBottom_toBottomOf="@+id/tvPhone3"
+            app:layout_constraintStart_toEndOf="@+id/tvPhone3"
+            app:layout_constraintTop_toTopOf="@+id/tvPhone3" />
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSendCommand"
@@ -131,4 +109,48 @@
             app:layout_constraintBottom_toBottomOf="@+id/btnSendCommand"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/btnSendCommand" />
+
+    <TextView
+            android:id="@+id/tvPhone1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="48dp"
+            android:fontFamily="@font/arialmt"
+            android:lineSpacingExtra="-9.9sp"
+            android:text="@string/phone_num_1"
+            android:textColor="@color/black"
+            android:textSize="14.7sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvCommandTitle" />
+
+    <TextView
+            android:id="@+id/tvPhone2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="48dp"
+            android:fontFamily="@font/arialmt"
+            android:lineSpacingExtra="-9.9sp"
+            android:text="@string/phone_num_2"
+            android:textColor="@color/black"
+            android:textSize="14.7sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvPhone1" />
+
+    <TextView
+            android:id="@+id/tvPhone3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="48dp"
+            android:fontFamily="@font/arialmt"
+            android:lineSpacingExtra="-9.9sp"
+            android:text="@string/phone_num_3"
+            android:textColor="@color/black"
+            android:textSize="14.7sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvPhone2" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
