--- a/app/src/main/res/layout/custom_dialog_set_admin_command.xml
+++ b/app/src/main/res/layout/custom_dialog_set_admin_command.xml
@@ -2,59 +2,86 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="400dp"
-        android:layout_height="500dp"
+        android:layout_height="350dp"
         android:orientation="vertical">
 
 
     <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvCommandTitle"
-            style="@style/commands_emails_fields"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/arialmt"
             android:gravity="center_horizontal"
             android:lineSpacingExtra="5.6sp"
-            android:text="@string/set_admin"
+            android:text="@string/set_admin_title"
             android:textColor="@color/medium_green"
             android:textSize="15.3sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    <br.com.sapereaude.maskedEditText.MaskedEditText
+
+    <TextView
+            android:id="@+id/tvAdminPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="48dp"
+            android:fontFamily="@font/arialmt"
+            android:lineSpacingExtra="-9.9sp"
+            android:text="@string/phone_num"
+            android:textColor="@color/black"
+            android:textSize="14.7sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvCommandTitle" />
+
+    <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/etAdminPhone"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/edit_text_border"
-            android:hint="0000000000"
+            android:digits="0123456789+-"
             android:imeOptions="actionDone"
-            android:inputType="number"
             android:maxLines="1"
             android:textAlignment="viewStart"
             android:textSize="14.7sp"
-            app:allowed_chars="1234567890"
-            app:keep_hint="true"
+            android:ems="10"
+            android:inputType="phone"
+            android:textDirection="ltr"
+            app:layout_constraintBottom_toBottomOf="@+id/tvAdminPhone"
+            app:layout_constraintStart_toEndOf="@+id/tvAdminPhone"
+            app:layout_constraintTop_toTopOf="@+id/tvAdminPhone" />
+
+    <TextView
+            android:id="@+id/tvPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="48dp"
+            android:fontFamily="@font/arialmt"
+            android:lineSpacingExtra="-9.9sp"
+            android:text="@string/password_title"
+            android:textColor="@color/black"
+            android:textSize="14.7sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvCommandTitle"
-            app:mask="###-#######" />
+            app:layout_constraintTop_toBottomOf="@+id/tvAdminPhone" />
+
 
     <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/etPassword"
             android:layout_width="0dp"
             android:layout_height="30dp"
-            android:layout_marginTop="32dp"
             android:background="@drawable/edit_text_border"
+            android:ems="10"
             android:imeOptions="actionDone"
             android:inputType="textPassword"
             android:text="0518"
             android:textSize="14.7sp"
-            app:layout_constraintEnd_toEndOf="@+id/etAdminPhone"
+            app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
             app:layout_constraintStart_toStartOf="@+id/etAdminPhone"
-            app:layout_constraintTop_toBottomOf="@+id/etAdminPhone" />
-
+            app:layout_constraintTop_toTopOf="@+id/tvPassword" />
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSendCommand"
