--- a/app/src/main/res/layout/activity_my_screens.xml
+++ b/app/src/main/res/layout/activity_my_screens.xml
@@ -68,18 +68,18 @@
     >
 
 
-        <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:tabTextColor="@color/white1"
-                app:tabSelectedTextColor="@color/black"
-                app:tabIndicatorColor="@color/black"
-                app:tabIndicatorHeight="4dp"
-                app:tabIndicatorGravity="bottom"
-                app:tabIndicatorFullWidth="true"
-                app:tabPaddingStart="0dp"
-                app:tabPaddingEnd="0dp"
+        <!--        <com.google.android.material.tabs.TabLayout-->
+        <!--                android:id="@+id/tab_layout"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                app:tabTextColor="@color/white1"-->
+        <!--                app:tabSelectedTextColor="@color/black"-->
+        <!--                app:tabIndicatorColor="@color/black"-->
+        <!--                app:tabIndicatorHeight="4dp"-->
+        <!--                app:tabIndicatorGravity="bottom"-->
+        <!--                app:tabIndicatorFullWidth="true"-->
+        <!--                app:tabPaddingStart="0dp"-->
+        <!--                app:tabPaddingEnd="0dp"-->
 
         />
 
