--- a/app/src/main/res/layout/item_sensor.xml
+++ b/app/src/main/res/layout/item_sensor.xml
@@ -7,20 +7,6 @@
 
 
     <TextView
-            android:id="@+id/tvId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tool:text="id"
-            android:textSize="13.3sp"
-            android:textColor="@color/dark1"
-            android:fontFamily="@font/arialmt"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.050"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,79 +17,85 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.150"
-            android:ellipsize="end"
-            android:ems="5"
-            android:maxLines="1"
-            app:layout_constraintEnd_toEndOf="parent" />
+            android:layout_marginStart="50dp" />
 
-    <EditText
-            android:id="@+id/etName"
-            tool:text="dddd"
-            android:hint="@string/rename"
+    <TextView
+            android:id="@+id/tvPhoneNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="150dp"
             android:textSize="13.3sp"
             android:textColor="@color/dark1"
             android:fontFamily="@font/arialmt"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.150"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="invisible"
-            android:inputType="text"
-            android:imeOptions="actionDone"
-
-    />
+            android:drawablePadding="7.3dp"
+            android:gravity="center"
+            tool:text="phone" />
 
 
     <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/ibEditName"
+            android:id="@+id/ibEditCamera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_edit"
+            android:layout_marginStart="250dp"
+            android:background="@color/transparent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.400"
-            android:background="@color/transparent"
-            android:padding="2dp"
-    />
+            app:srcCompat="@drawable/cam_settings"
 
-    <TextView
-            android:id="@+id/tvIsLocate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/not_located"
-            android:drawableStart="@drawable/ic_not_located"
-            android:textSize="13.3sp"
-            android:textColor="@color/red1"
-            android:fontFamily="@font/arialmt"
-            app:layout_constraintStart_toEndOf="@+id/ibEditName"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="10dp"
-            android:gravity="center"
-            android:drawablePadding="7.3dp"
-    />
+            />
 
-    <ToggleButton
-            android:id="@+id/togIsActive"
-            android:layout_width="55dp"
-            android:layout_height="wrap_content"
-            android:button="@drawable/toggle_selector_active"
-            android:gravity="center"
-            android:background="@color/transparent"
-            android:textOff=""
-            android:textOn=""
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.954"
-    />
+
+    <!--    <androidx.appcompat.widget.AppCompatImageButton-->
+    <!--            android:id="@+id/ibEditName"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            app:srcCompat="@drawable/ic_edit"-->
+    <!--            app:layout_constraintStart_toStartOf="parent"-->
+    <!--            app:layout_constraintTop_toTopOf="parent"-->
+    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--            app:layout_constraintEnd_toEndOf="parent"-->
+    <!--            app:layout_constraintHorizontal_bias="0.400"-->
+    <!--            android:background="@color/transparent"-->
+    <!--            android:padding="2dp"-->
+    <!--    />-->
+
+    <!--    <TextView-->
+    <!--            android:id="@+id/tvIsLocate"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:text="@string/not_located"-->
+    <!--            android:drawableStart="@drawable/ic_not_located"-->
+    <!--            android:textSize="13.3sp"-->
+    <!--            android:textColor="@color/red1"-->
+    <!--            android:fontFamily="@font/arialmt"-->
+    <!--            app:layout_constraintStart_toEndOf="@+id/ibEditName"-->
+    <!--            app:layout_constraintTop_toTopOf="parent"-->
+    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--            android:layout_marginStart="25dp"-->
+    <!--            android:gravity="center"-->
+    <!--            android:drawablePadding="7.3dp"-->
+    <!--    />-->
+
+    <!--    <ToggleButton-->
+    <!--            android:id="@+id/togIsActive"-->
+    <!--            android:layout_width="55dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:button="@drawable/toggle_selector_active"-->
+    <!--            android:gravity="center"-->
+    <!--            android:background="@color/transparent"-->
+    <!--            android:textOff=""-->
+    <!--            android:textOn=""-->
+    <!--            app:layout_constraintStart_toStartOf="parent"-->
+    <!--            app:layout_constraintTop_toTopOf="parent"-->
+    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--            app:layout_constraintEnd_toEndOf="parent"-->
+    <!--            app:layout_constraintHorizontal_bias="0.954"-->
+    <!--    />-->
+
 
     <!--&lt;!&ndash;<TextView&ndash;&gt;-->
             <!--&lt;!&ndash;android:id="@+id/tvIsActive"&ndash;&gt;-->
